--- a/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/xeno_tunnel.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/xeno_tunnel.yml
@@ -24,6 +24,10 @@
     icon:
       sprite: _RMC14/Interface/map_blips.rsi
       state: xenotunnel
+  - type: TacticalMapAlwaysVisible
+    visibleToXenos: true
+    visibleAsXenoStructure: true
+    visibleToMarines: false
   - type: UserInterface
     interfaces:
       enum.SelectDestinationTunnelUI.Key:
